--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+.button {
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  width: 100px;
+  height: 30px;
+}
